# plexusplay-live

./: .gitignore  README.md
audience-app/: App.js  UserIdModal.js  app.json  package-lock.json  package.json
audience-app/src/: App.js
backend/: Cargo.toml  Pipfile  backend.py  hello.txt  install_service.sh  live-voting.service  log.txt  run_backend.sh  setup_nginx.sh
backend/nginx-confs/: voting-socket.rumpus.club.conf
backend/src/: lib.rs  main.rs
backend/test/: artillery-convert.py  loadtest.yaml  setBallot.py
nginx-confs/: media.rumpus.club.conf  voting-socket.rumpus.club.conf
utils/: artillery-convert.py  setBallot.py
