[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-tungstenite = "0.22.2"
futures = "0.3.28"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
