[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
futures-util = "0.3.28"
log = "0.4.20"
serde = { version = "1.0.183", features = ["serde_derive"] }
serde_json = "1.0.105"
time = { version = "0.3.25", features = ["serde"] }
tokio = { version = "1.32.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
warp = "0.3.5"
